# taxvault

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.js  vitest.config.mjs
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml
crates/taxvault-core/: Cargo.toml
crates/taxvault-core/src/: date.rs  error.rs  filer.rs  lib.rs  ssn.rs  tax_facts.rs  validation.rs
crates/taxvault-engine/: Cargo.toml
crates/taxvault-engine/src/: bracket.rs  compute.rs  error.rs  lib.rs  policy.rs  rule_pack.rs  tax_table.rs  trace.rs
crates/taxvault-forms/: Cargo.toml
crates/taxvault-forms/src/: lib.rs
crates/taxvault-loader/: Cargo.toml
crates/taxvault-loader/src/: dto.rs  error.rs  lib.rs  parse.rs  rule_pack_loader.rs  tax_facts_loader.rs  tax_table_loader.rs
crates/taxvault-loader/tests/: golden_vectors.rs
crates/taxvault-wasm/: Cargo.toml
crates/taxvault-wasm/src/: lib.rs
docs/: incident-runbook.md  production-readiness.md  release-checklist.md  rule-pack-verification.md  tax-table-review-2025.md
rules/: federal_2025.toml
scripts/: verify_tax_table.py
tax-table/: federal_2025_table.csv
tests/: test_verify_tax_table.py  test_web_js_syntax.py  web_smoke.py
tests/golden_vectors/: hoh_blind_w2_150k.json  hoh_one_child_actc_12500.json  hoh_one_child_ctc_phaseout_201000.json  hoh_one_child_w2_50k.json  mfj_two_w2s.json  mfj_two_w2s_both_65_plus_one_blind_67800.json  mfj_two_w2s_two_children_70k.json  mfj_two_w2s_two_children_ctc_phaseout_401500.json  mfj_w2_qualified_dividends_zero_rate_threshold.json  single_65_plus_w2_40k.json  single_ssa1099_below_taxable_threshold.json  single_ssa1099_exactly_50_percent_taxable.json  single_ssa1099_exactly_85_percent_taxable.json  single_ssa1099_only_withholding.json  single_ssa1099_plus_w2.json  single_w2_150k.json  single_w2_60k.json  single_w2_interest_dividends_145500.json  single_w2_qualified_dividends_twenty_rate_threshold.json  single_w2_qualified_dividends_zero_rate_threshold.json  single_w2_student_loan_interest_2500.json  single_w2_zero_income_withholding_only.json
tests/playwright/: smoke.spec.js
tests/unit/: common.test.mjs  draft_helpers.test.mjs  form_state.test.mjs  money.test.mjs  tax_input.test.mjs
web/: app.css  app.js  index.html
web/modules/: cards.js  common.js  draft_helpers.js  exports.js  form_state.js  money.js  review_packet.js  support_review.js  tax_input.js
