[workspace]
resolver = "2"
members = [
    "crates/taxvault-core",
    "crates/taxvault-engine",
    "crates/taxvault-forms",
    "crates/taxvault-loader",
    "crates/taxvault-wasm",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
description = "Offline federal tax estimate engine and browser UI for a narrow 2025 filing slice."
readme = "README.md"
repository = "https://github.com/iAnonymous3000/taxvault"
license = "MPL-2.0"

[workspace.dependencies]
rust_decimal = "1"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
csv = "1"
