[package]
name = "taxvault-forms"
edition.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
taxvault-core = { path = "../taxvault-core" }
taxvault-engine = { path = "../taxvault-engine" }
rust_decimal = { workspace = true }
serde = { workspace = true }
